<resources>
    <string name="app_name">Аутоматско звоно и сат</string>
    <string name="Username">admin</string>
    <string name="Login">Улаз</string>
    <string name="Kontrole">Контроле:</string>
    <string name="admin">Администратор</string>
    <string name="Pozvoni">Звоно</string>
    <string name="Proveri">Стање</string>
    <string name="povezi">Повежи</string>
    <string name="raspored_zvona">Распореди звона</string>
    <string name="namestanje_sata">Намештање сата</string>
    <string name="Plus1">+1мин.</string>
    <string name="PlusSmart">Auto</string>
    <string name="sinhronizacija">Синхронизација у:</string>
    <string name="ukljuceno_zvono">Укључено звоно</string>
    <string name="dostupni_rasporedi_txt">Постојећи распореди</string>
    <string name="ruter">Интернет рутер</string>
    <string name="uputstvo">Унети време кад треба звонити у току дана. У облику: "Х:Y" где је Х број сати, а Y број минута. Размаћи са "," без размака!</string>
    <string name="prazna_lista_zvona">Додајте звона у току дана.</string>
    <string name="prazna_lista_rasporeda">Додајте нови распоред звона.</string>
    <string name="info_txt">"За најбољи доживљај употребе апликације:\n 1. Пре стартовања апликације, повезати се са контролером SAT_ESP32\\n2. Након завршетка рада, прекинути везу са контролером.\\n3. Увек кад се шаље нека контрола, обавезно надгледати да ли је исписана порука Послато, јер ако није, та информација није стигла у контролер.\\n4. Ограничење броја звона у току дана: 35\n "</string>
    <string name="info">За најбољи рад система:</string>
    <string name="info1">1. Пре стартовања апликације, повезати се са контролером SAT_ESP32.</string>
    <string name="info2">2. Након завршетка рада, прекинути везу са контролером.</string>
    <string name="info3">3. Увек кад се шаље нека контрола, нагледати да ли је исписана порука "Послато", јер ако није, та информација није стигла у контролер.</string>
    <string name="info4">4. Ограничење броја звона у току дана: 35.</string>
</resources>