<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="40"
    >

  <!--  <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:title="My App"
        android:titleTextColor="@color/white" /> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/admin"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:id="@+id/username_txt"
        android:textSize="20sp"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/imgBtnWifi"
        android:layout_weight="3"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:src="@drawable/wifi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/Kontrole"
        android:textAllCaps="false"
        android:layout_marginStart="10sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_weight="2"
        android:layout_marginTop="15sp"
        android:id="@+id/kontrole_txt"
        android:textSize="15sp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:weightSum="20"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/imgBtnBell"
            android:layout_weight="6"
            android:layout_marginStart="10sp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/bell" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/imgBtnCheck"
            android:layout_weight="6"
            android:layout_marginStart="10sp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/check" />

        <Button
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:id="@+id/btnRezDijagnostike"
            android:layout_weight="2"
            android:backgroundTint="@color/white"
            android:layout_marginStart="20sp"
            style="@style/Widget.MaterialComponents.Button"
            />

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/namestanje_sata"
        android:textAllCaps="false"
        android:layout_marginStart="8sp"
        android:layout_marginTop="15sp"
        android:textColor="@color/black"
        android:layout_weight="2"
        android:id="@+id/namestanje_sata_txt"
        android:textSize="16sp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:weightSum="20"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnPoterajZaJedan"
            android:layout_weight="6"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginStart="10sp"
            android:textSize="14sp"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/Plus1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnSmartTeranjeKazaljke"
            android:layout_weight="6"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginStart="14sp"
            android:text="@string/PlusSmart"
            style="@style/Widget.MaterialComponents.Button"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="14sp"
            android:id="@+id/clock_smart"
            android:text="00:00"
            tools:ignore="Deprecated" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_marginTop="15sp"
        android:weightSum="20"
        >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sinhronizacija"
        android:textAllCaps="false"
        android:layout_marginStart="8sp"
        android:textColor="@color/black"
        android:layout_weight="10"
        android:id="@+id/sinhronizacija_txt"
        android:textSize="14sp"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_weight="5"
        android:textSize="14sp"
        android:id="@+id/sync_clock"
        android:text="06:30"
        tools:ignore="Deprecated" />

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/imgBtnCorrect"
        android:layout_weight="3"
        android:layout_marginStart="5sp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:src="@drawable/correct_png" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_marginTop="15sp"
        android:weightSum="20"
        >

    <Switch
        android:id="@+id/ukljuceno_zvono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:textSize="14sp"
        android:text="@string/ukljuceno_zvono"
        android:checked="true"
        android:layout_marginStart="10sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" /> <!-- Prethodno stanje -->
        />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginStart="8sp"
            android:textColor="@color/black"
            android:layout_weight="9"
            android:id="@+id/info_o_rasporedu_txt"
            android:textSize="14sp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/ruter"
        android:textAllCaps="false"
        android:layout_marginStart="8sp"
        android:layout_marginTop="10sp"
        android:textColor="@color/black"
        android:layout_weight="2"
        android:id="@+id/ruter_txt"
        android:textSize="14sp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:weightSum="20"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="7"
            android:textSize="14sp"
            android:hint="Име"
            android:id="@+id/ssid"
            tools:ignore="Deprecated" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="7"
            android:textSize="14sp"
            android:hint="Шифра"
            android:id="@+id/password"
            tools:ignore="Deprecated" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/imgBtnCorrect2"
            android:layout_weight="4"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_gravity="end"
            android:src="@drawable/correct_png" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
    >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            android:titleTextColor="@android:color/white" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgBtnInfo"
            android:layout_marginStart="20sp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/info" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgBtnRaspored2"
            android:scaleType="centerInside"
            android:layout_marginEnd="20sp"
            android:adjustViewBounds="true"
            android:layout_gravity="end"
            android:src="@drawable/schedule" />

    </FrameLayout>


</LinearLayout>